force-app/main/default/objects/Email_Lead_Field__c/Email_Lead_Field__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Email Lead Field</label>
<!-- Gitting -->
</CustomObject>