force-app/main/default/objects/Email_Lead_Field__c/fields/Email_Body_Field__c.field-meta.xml
<CustomField>
    <fullName>Email_Body_Field__c</fullName>
    <label>Email Body Field</label>
    <type>TextArea</type>
<!-- Gitting -->
</CustomField>