force-app/main/default/objects/Email_Lead_Field__c/fields/Nick_Keyword__c.field-meta.xml
<CustomField>
    <fullName>Nick_Keyword__c</fullName>
    <label>Nick Keyword</label>
    <length>255</length>
    <type>Text</type>
<!-- Gitting -->
</CustomField>