force-app/main/default/objects/Email_Lead_Field__c/fields/Nick_User__c.field-meta.xml
<CustomField>
    <fullName>Nick_User__c</fullName>
    <label>Nick User</label>
    <length>255</length>
    <type>Text</type>
<!-- Gitting -->
</CustomField>