force-app/main/default/objects/Email_Lead_Field__c/fields/Selected_fields__c.field-meta.xml
<CustomField>
    <fullName>Selected_fields__c</fullName>
    <label>Selected fields</label>
    <length>255</length>
    <type>Text</type>
<!-- Gitting -->
</CustomField>