force-app/main/default/objects/Email_Lead_Field__c/fields/Summary_Field__c.field-meta.xml
<CustomField>
    <fullName>Summary_Field__c</fullName>
    <label>Summary Field</label>
    <type>TextArea</type>
<!-- Gitting -->
</CustomField>